HAI-1880 Fix new hanke link font size being too small in empty hanke list text

--- a/src/domain/hanke/portfolio/HankePortfolio.module.scss
+++ b/src/domain/hanke/portfolio/HankePortfolio.module.scss
@@ -12,6 +12,10 @@
       flex-direction: column;
       align-items: center;
       margin: var(--spacing-3-xl) auto;
+
+      .newHankeLink {
+        font-size: var(--fontsize-heading-m) !important;
+      }
     }
 
     .hankeCard {
